@startuml
'https://plantuml.com/class-diagram

Usuario  --> "*" FiguritaColeccion
FiguritaColeccion --> "1" Figurita
Usuario --> "*" Figurita
PublicacionIntercambio --> "1" Usuario
PublicacionIntercambio --> "1" FiguritaColeccion
PropuestaIntercambio --> PublicacionIntercambio
PropuestaIntercambio --> Usuario
PropuestaIntercambio --> "*" Figurita
Subasta --> Figurita
Subasta --> Usuario
Subasta --> IReglastrategy
Subasta --> OfertaSubasta
OfertaSubasta --> Usuario
OfertaSubasta --> "*" Figurita
Feedback --> Usuario
Feedback --> PublicacionIntercambio
CalificadorUsuario ..> Usuario
CalificadorUsuario ..> TipoReputacion
Usuario --> TipoReputacion
SeleccionStrategy --|> IReglastrategy
CategoriaStrategy --|> IReglastrategy
CantidadFiguritasStrategy --|> IReglastrategy
EquipoStrategy --|> IReglastrategy

class Figurita{
  - Integer numero
  - Categoria categoria
  - String nombre
  - String seleccion
  - String equipo
  - String descripcion
}

class FiguritaColeccion {
  - Integer cantidad
  - Figurita figurita
}

class OfertaSubasta {
  - Usuario usuario
  - List<Figurita> figuritas
}

class PropuestaIntercambio {
  - PublicacionIntercambio publicacion
  - Usuario usuario
  - List<Figurita> figuritas
  - EstadoPropuesta estado
}

class PublicacionIntercambio {
  - Usuario usuario
  - FiguritaColeccion figurita
  - EstadoPublicacion estado
}

class Subasta {
  - Figurita figurita
  - Usuario usuario
  - LocalDateTime fechaCreacion
  - LocalDateTime fechaCierre
  - List<IReglastrategy> condicionesMinimas
  - OfertaSubasta mejorApuesta
}

class Usuario {
  - String nombre
  - List<FiguritaColeccion> repetidas
  - List<Figurita> faltantes
  - TipoReputacion reputacion
}

class Feedback {
  - Usuario calificador
  - PublicacionIntercambio publicacion
  - Integer puntuacion
  - LocalDateTime fecha
}


 ' Clase que sera llamada en cronjob¡
class CalificadorUsuario{
' obtendra calificacion segun el promedio de las ultimas x calificaciones
  + asignarReputacion(Usuario) : TipoReputacion
}

enum TipoReputacion {
  MALA, REGULAR, BUENA
}

interface IReglastrategy{
  + cumpleRegla(OfertaSubasta) : Boolean
}

class CantidadFiguritasStrategy {
}

class CategoriaStrategy {
}

class EquipoStrategy {
}

class SeleccionStrategy{
- MEGADETH
}
@enduml
